# tdd-katas

./: .gitignore  README.org  flake.nix
manhattan/: CMakeLists.txt  README.org
manhattan/src/: CMakeLists.txt  point.cpp
manhattan/src/include/: point.h
manhattan/tests/: CMakeLists.txt  test.cpp
ohce/: CMakeLists.txt  README.org
ohce/src/: CMakeLists.txt  clock.cpp  display.cpp  echo.cpp  exceptions.cpp  greeting.cpp  ohce.cpp  palindrome.cpp  session.cpp
ohce/src/include/: clock.h  display.h  echo.h  exceptions.h  greeting.h  ohce.h  palindrome.h  session.h  uuidv4.h
ohce/tests/: CMakeLists.txt  test.cpp  test_echo.cpp  test_greeting.cpp  test_palindrome.cpp
roman/: CMakeLists.txt  README.org
roman/src/: CMakeLists.txt  number.cpp
roman/src/include/: number.h
roman/tests/: CMakeLists.txt  test.cpp
testing/: main.cpp
wardrobe/: CMakeLists.txt  README.org
wardrobe/src/: CMakeLists.txt  catalog.cpp  combinations.cpp  item.cpp  list.cpp  proposals.cpp  wardrobe.cpp  wardrobe_catalog.cpp
wardrobe/src/include/: catalog.h  combinations.h  item.h  list.h  proposals.h  wardrobe.h  wardrobe_catalog.h
wardrobe/tests/: CMakeLists.txt  test.cpp  test_list.cpp
xmas-lights/: CMakeLists.txt  README.org
xmas-lights/src/: CMakeLists.txt  grid.cpp  main.cpp  operation.cpp  region.cpp
xmas-lights/src/include/: grid.h  operation.h  region.h
xmas-lights/tests/: CMakeLists.txt  main.cpp  test.cpp  test_activate.cpp  test_disactivate.cpp  test_grid.cpp  test_lights.cpp  test_regions.cpp  test_toggle.cpp
